--- a/sandbox/build.gradle
+++ b/sandbox/build.gradle
@@ -1,3 +1,17 @@
 apply plugin: 'java'
 apply plugin: 'application'
-mainClassName = "PointTest"
+mainClassName = "PointTesting"
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation 'com.buschmais.jqassistant.plugin:testng:1.11.1'
+    implementation 'junit:junit:4.13.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+}
+
+dependencies {
+    implementation 'org.testng:testng:7.4.0'
+}
