--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -12,7 +12,7 @@ dependencies {
     implementation 'com.buschmais.jqassistant.plugin:testng:1.11.1'
     implementation 'junit:junit:4.13.1'
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
-    implementation 'org.hamcrest:hamcrest:2.2'
+    implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
 }
 
 dependencies {
