--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -14,6 +14,8 @@ dependencies {
     implementation 'org.junit.jupiter:junit-jupiter:5.7.0'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'com.beust:jcommander:1.82'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.19'
+    implementation 'com.google.code.gson:gson:2.8.9'
 }
 
 dependencies {
@@ -21,8 +23,5 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.0'
 }
 
-test {
-    useJUnitPlatform()
-}
 
 
