--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -8,11 +8,23 @@ task testGroups(type: Test) {
     useTestNG {
         suites 'src/test/recources/testing-groups.xml'
     }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${target}"
+    }
 }
 
 task testContacts(type: Test) {
     useTestNG {
         suites 'src/test/recources/testing-contacts.xml'
+    }
+    if (project.hasProperty('browser')) {
+        systemProperty 'browser', "${browser}"
+    }
+    if (project.hasProperty('target')) {
+        systemProperty 'target', "${target}"
     }
 }
 
@@ -24,6 +36,7 @@ dependencies {
     implementation 'com.beust:jcommander:1.82'
     implementation 'com.thoughtworks.xstream:xstream:1.4.19'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha12'
 }
 
 dependencies {
