--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -4,6 +4,10 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useTestNG()
+}
+
 task testGroups(type: Test) {
     useTestNG {
         suites 'src/test/recources/testing-groups.xml'
@@ -37,6 +41,9 @@ dependencies {
     implementation 'com.thoughtworks.xstream:xstream:1.4.19'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha12'
+    implementation 'org.testcontainers:mysql:1.16.3'
+    implementation 'org.hibernate:hibernate-core:5.4.33'
+    implementation 'mysql:mysql-connector-java:8.0.27'
 }
 
 dependencies {
