--- a/maintis-tests/build.gradle
+++ b/maintis-tests/build.gradle
@@ -1,10 +1,9 @@
 apply plugin: 'java'
-apply plugin: 'application'
-mainClassName = "MyFirstProgram"
 
 repositories {
     mavenCentral()
 }
+
 
 dependencies {
     implementation 'com.buschmais.jqassistant.plugin:testng:1.11.1'
@@ -16,4 +15,9 @@ dependencies {
     implementation 'org.testng:testng:7.4.0'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.0'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+}
+
+test {
+    useTestNG()
 }
