--- a/maintis-tests/build.gradle
+++ b/maintis-tests/build.gradle
@@ -16,6 +16,7 @@ dependencies {
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'commons-net:commons-net:3.8.0'
 }
 
 test {
