--- a/maintis-tests/build.gradle
+++ b/maintis-tests/build.gradle
@@ -17,6 +17,9 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.1.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'commons-net:commons-net:3.8.0'
+    implementation 'org.subethamail:subethasmtp:3.1.7'
+    implementation 'ru.lanwen.verbalregex:java-verbal-expressions:1.8'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha12'
 }
 
 test {
